@@ -6,6 +6,8 @@
 	cvl/glsl/hdr/tonemap_tumblinrushmeier99_step1.glsl,
 	cvl/glsl/hdr/tonemap_tumblinrushmeier99_step2.glsl, cvl/Makefile.am: 
 	Add cvl_tonemap_tumblinrushmeier99().
+	* cvtool/cmd_tonemap.c, tests/cmd_tonemap.sh, doc/cvtool.texi: Add the
+	tumblinrushmeier99 method to the tonemap command.
 
 2008-01-08  Martin Lambers <marlam@marlam.de>
 
